--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -40,9 +40,9 @@ jobs:
       - name: checkout code
         uses: actions/checkout@v2
 
-      - name: login to docker hub
-        if: "github.event_name != 'pull_request'"
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+     # - name: login to docker hub
+     #   if: "github.event_name != 'pull_request'"
+     #   run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v1
@@ -55,7 +55,7 @@ jobs:
 
       - name: Set docker build option env
         if: "github.event_name != 'pull_request'"
-        run: echo "BUILD_OPTION=--push" >> $GITHUB_ENV
+        run: echo "" >> $GITHUB_ENV
 
       - name: build image
         if: "!contains(github.ref, 'refs/tags/v')"
@@ -71,7 +71,13 @@ jobs:
             --tag shellhubio/agent:${{ env.RELEASE_VERSION }}-${{ matrix.dockerfile }} \
             --build-arg SHELLHUB_VERSION=${{ env.RELEASE_VERSION }} \
             --platform linux/${{ matrix.arch }} .
-
+      - name: export rootfs
+        run: docker export $(docker create shellhubio/agent:${{ env.RELEASE_VERSION }}-${{ matrix.dockerfile }}) | gzip > rootfs-${{ matrix.dockerfile }}.tar.gz
+      - name: upload rootfs artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: rootfs-${{ matrix.dockerfile }}
+          path: rootfs-${{ matrix.dockerfile }}.tar.gz
   multiarch:
     if: github.event_name != 'pull_request'
     needs: build
@@ -84,8 +90,8 @@ jobs:
       - name: Set github reference env
         run: echo RELEASE_VERSION=${GITHUB_REF#refs/*/} >> $GITHUB_ENV
 
-      - name: login to docker hub
-        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      #- name: login to docker hub
+      #  run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
       - name: build multiarch image
         if: "!contains(github.ref, 'refs/tags/v')"
@@ -107,8 +113,8 @@ jobs:
               docker manifest annotate shellhubio/agent:${{ github.sha }} shellhubio/agent:${{ github.sha }}-${archname[i]} --os linux --arch ${arch[i]} --variant ${variant[i]}
             done
 
-            echo "Pushing multiarch manifest"
-            docker manifest push shellhubio/agent:${{ github.sha }}
+            #echo "Pushing multiarch manifest"
+            #docker manifest push shellhubio/agent:${{ github.sha }}
 
       - name: build multiarch image from github tag
         if: contains(github.ref, 'refs/tags/v')
@@ -130,5 +136,37 @@ jobs:
               docker manifest annotate shellhubio/agent:${{ env.RELEASE_VERSION }} shellhubio/agent:${{ env.RELEASE_VERSION }}-${archname[i]} --os linux --arch ${arch[i]} --variant ${variant[i]}
             done
 
-            echo "Pushing multiarch manifest"
-            docker manifest push shellhubio/agent:${{ env.RELEASE_VERSION }}
+            #echo "Pushing multiarch manifest"
+            #docker manifest push shellhubio/agent:${{ env.RELEASE_VERSION }}
+  draft:
+    if: github.event_name != 'pull_request'
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: download amd64
+        uses: actions/download-artifact@v3
+        with:
+          name: rootfs-amd64
+      - name: download arm32v6
+        uses: actions/download-artifact@v3
+        with:
+          name: rootfs-arm32v6
+      - name: download arm32v7
+        uses: actions/download-artifact@v3
+        with:
+          name: rootfs-arm32v7
+      - name: download arm64v8
+        uses: actions/download-artifact@v3
+        with:
+          name: rootfs-arm64v8
+      - name: download i386
+        uses: actions/download-artifact@v3
+        with:
+          name: rootfs-i386
+      - name: release draft
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/v')
+        with:
+          draft: true
+          generate_release_notes: true
+          files: rootfs-*.tar.gz
