--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -55,7 +55,7 @@ jobs:
 
       - name: Set docker build option env
         if: "github.event_name != 'pull_request'"
-        run: echo "" >> $GITHUB_ENV
+        run: echo "BUILD_OPTION=--load" >> $GITHUB_ENV
 
       - name: build image
         if: "!contains(github.ref, 'refs/tags/v')"
@@ -63,8 +63,6 @@ jobs:
           docker buildx build ${{ env.BUILD_OPTION }} -f agent/Dockerfile.${{ matrix.dockerfile }} \
             --tag shellhubio/agent:${{ github.sha }}-${{ matrix.dockerfile }} \
             --platform linux/${{ matrix.arch }} .
-            docker image ls
-
 
       - name: build image from github tag
         if: "contains(github.ref, 'refs/tags/v')"
@@ -73,11 +71,9 @@ jobs:
             --tag shellhubio/agent:${{ env.RELEASE_VERSION }}-${{ matrix.dockerfile }} \
             --build-arg SHELLHUB_VERSION=${{ env.RELEASE_VERSION }} \
             --platform linux/${{ matrix.arch }} .
-            docker image ls
       - name: export rootfs
         run: |
           docker export $(docker create shellhubio/agent:${{ env.RELEASE_VERSION }}-${{ matrix.dockerfile }}) | gzip > rootfs-${{ matrix.dockerfile }}.tar.gz
-          docker image ls
 
       - name: upload rootfs artifact
         uses: actions/upload-artifact@v3
