--- a/.github/workflows/build-agent.yml
+++ b/.github/workflows/build-agent.yml
@@ -143,6 +143,22 @@ jobs:
             echo "Pushing multiarch manifest"
             docker manifest push shellhubio/agent:${{ env.RELEASE_VERSION }}
 
+  vendored-agent-tarball:
+    if: "contains(github.ref, 'refs/tags/v')"
+    runs-on: ubuntu-20.04
+    steps:
+      - name: checkout code
+        uses: actions/checkout@v3
+
+      - name: export rootfs
+        run: |
+          cd ./agent && go mod vendor && tar cf shellhub-agent.tar.gz *
+
+      - name: upload rootfs artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: shellhub-agent
+          path: shellhub-agent.tar.gz
   draft:
     if: "contains(github.ref, 'refs/tags/v')"
     needs: build
@@ -168,10 +184,16 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: rootfs-i386
+      - name: download vendored tarball
+        uses: actions/download-artifact@v3
+        with:
+          name: shellhub-agent
       - name: release draft
         uses: softprops/action-gh-release@v1
         if: "contains(github.ref, 'refs/tags/v')"
         with:
           draft: true
           generate_release_notes: true
-          files: rootfs-*.tar.gz
+          files: |
+            rootfs-*.tar.gz
+            shellhub-agent.tar.gz
